--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.8.2"
+  },
+  "dependencies": {
+    "@open-wa/wa-automate": "^4.45.2"
   }
 }
