--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --respawn --transpile-only --clear ./src/index.ts"
+    "dev": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/index.ts\""
   },
   "repository": {
     "type": "git",
@@ -19,10 +19,13 @@
   },
   "homepage": "https://github.com/FelipeDasr/bot-joselito#readme",
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
+    "ts-node": "^10.9.1",
+    "@types/node": "^18.7.14",
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@open-wa/wa-automate": "^4.45.2"
+    "@open-wa/wa-automate": "^4.45.2",
+    "jimp": "^0.16.1",
+    "nanoid": "^3.3.4"
   }
 }
