--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
   },
   "homepage": "https://github.com/FelipeDasr/bot-joselito#readme",
   "devDependencies": {
-    "ts-node": "^10.9.1",
     "@types/node": "^18.7.14",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
     "@open-wa/wa-automate": "^4.45.2",
     "jimp": "^0.16.1",
-    "nanoid": "^3.3.4"
+    "nanoid": "^3.3.4",
+    "nodemon": "^2.0.19"
   }
 }
